collapsed navbar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@
 	padding-top: 5px;
 	padding-right: 30px;
 }
+.navbar-collapse.collapse.in ul li, .navbar-collapse.collapsing ul li {
+	text-align: center;
+	font-size: 25px;
+	margin: 20px;
+}
+
 
 /* MENU */
 .menu-header-img {
@@ -22,6 +28,7 @@
 .menu-header {
 	font-size: 70px;
 	align-self: center;
+	text-align: center;
 }
 .menu-col {
 	margin-bottom: 50px;
